# python-course-assignments

./: README.md
Backup/: caddisfly_scraper.py
Backup/BackUpDay04/: ncbi_fibroin_scraper copy 2.py  ncbi_fibroin_scraper copy.py  (+1 more)
day01/: Hello_world.py
day02/: LiBr_con_mass_LiBr.py  LiBr_con_volume_H2O.py  README.md  hello_world.py
day02/pyramid-volume-gui/: README.md  pyproject.toml
day02/pyramid-volume-gui/src/: calculations.py  gui.py  main.py
day02/pyramid-volume-gui/tests/: test_calculations.py
day03/: .gitignore  LiBr_con_mass_LiBr.py  LiBr_con_volume_H2O.py  README.md  bus_log.py  cleanup.py  main.py  summary_of_commands_from_class.md  test_bus_log.py
day04/: .gitignore  README.md  caddisfly_scraper.py  ncbi_fibroin_scraper.py  pyproject.toml
day05/: README.md  TicTacToe.py  n_dim_tictactoe.py  ndim_tictactoe.py  test_game_logic.py  test_tictactoe.py  tic_tac_toe_business_logic.py  tictactoe_game.py
day08/: README.md  Species_Index.md  ncbi_scrapper.py  pyproject.toml  run_generate_species_index.py  run_generate_taxonomy_graph.py  sxn_analysis_and_plotting.py
day09/: README.md  deadlines.md  main.py  plot_submissions.py  pyproject.toml  scraped_submissions.md  subjects.txt  submissions.json  submissions.md
libraries/: USING_ncbi_protein_scraper_lib.py.md  USING_serine_sxn_analysis_lib.md  USING_serine_sxn_plot_lib.md  aminoacids_composition_analysis_lib.py  generate_species_index.py  generate_taxonomy_graph.py  ncbi_protein_scraper_lib.py  serine_sxn_analysis_lib.py  serine_sxn_plot_lib.py
ncbi_fibroin_sequences/: Summary_Index.md
(+450 files in other folders)
